# Hotel-Project

./: .gitignore  README.md
project/: CMakeLists.txt
project/application_status/: Clients.txt  archiveReservations.txt  currentReservations.txt  rooms.txt
project/program/: CMakeLists.txt
project/program/include/: LoginFrame.h  LoginPanel.h  MenuPanel.h  RegistrationPanel.h  ReservationItemData.h  ReservationPanel.h  RoomsPanel.h  SettingsPanel.h  SimpleReservationVirtualListControl.h  SimpleRoomVirtualListControl.h  SimpleVirtualListControl.h  baseLogRegistPanel.h  baseLoggedPanel.h  basePanel.h  cApp.h  cMain.h  gMain.h  itemdata.h
project/program/include/Lists/: ReservationItemData.h  RoomItemData.h  SimpleReservationVirtualListControl.h  SimpleRoomVirtualListControl.h  SimpleVirtualListBase.h
project/program/src/: LoginFrame.cpp  LoginPanel.cpp  MenuPanel.cpp  RegistrationPanel.cpp  ReservationPanel.cpp  RoomsPanel.cpp  SettingsPanel.cpp  SimpleReservationVirtualListControl.cpp  SimpleRoomVirtualListControl.cpp  SimpleVirtualListControl.cpp  baseLogRegistPanel.cpp  baseLoggedPanel.cpp  basePanel.cpp  cApp.cpp  cMain.cpp  gMain.cpp  main.cpp
project/program/src/Lists/: SimpleReservationVirtualListControl.cpp  SimpleRoomVirtualListControl.cpp
server/: client.py  dbhandler.py  server.py
server/dbs/: users.db
szczepanek/introduction/: CMakeLists.txt
szczepanek/introduction/program/src/: main.cpp
szczepanek/workshop/: CMakeLists.txt
szczepanek/workshop/program/: CTestTestfile.cmake  Makefile  cmake_install.cmake
szczepanek/workshop/program/src/: main.cpp
wojtaszczyk/introduction/: CMakeLists.txt
wojtaszczyk/introduction/program/src/: main.cpp
wojtaszczyk/workshop/: CMakeLists.txt
wojtaszczyk/workshop/program/: CMakeLists.txt
wojtaszczyk/workshop/program/src/: main.cpp
